update about me

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ author:
   name: LegendLee
   email: legendlee1314@gmail.com
 description: "LorpheuX -- Legend's Blog."
-about: "One person who enjoys codes."
+about: "SS at SYSU. CAS. Coding. Math. Robotics. Network. Algorithm."
 tags_path: /tags.html
 feed: /atom.xml
 static:
