--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ author:
   email: legendlee1314@gmail.com
 description: "LorpheuX -- Legend's Blog."
 about: "SS at SYSU. CAS 2010-2014. Coding. Math. Robotics. Network. Algorithm."
-about_blog: "Take notes. Store what learned. If you like some and want to reprint, please leave comment. Thanks!"
+about_blog: "Take notes. Store what learned. If you like some and want to repost some without reposting declaration, please leave comment. Thanks!"
 tags_path: /tags.html
 feed: /atom.xml
 static:
